--- a/Fyp5Html/login.html
+++ b/Fyp5Html/login.html
@@ -1,5 +1,6 @@
 <html>
- 
+   <meta charset="utf-8">
+   <meta name= "viewport" content="initial-scale=1.0, user-scalable=no">
  <head>
     <title>Login Page</title>
     
