--- a/Fyp5Html/maptest.html
+++ b/Fyp5Html/maptest.html
@@ -121,7 +121,7 @@ window.onload = initialize;
     * The callback parameter executes the initMap() function
     -->
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?=AIzaSyDeaXNyQ1onKQkIGmfxmpEc5VsG7hbLit0&libraries=places&callback=initMap">
+    src="//EnterPublicHereThatsWhyYouGetABug&libraries=places&callback=initMap">
     </script>
   </body>
 
